Footer logo no longer gets hidden behind the 'rock' image

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -19,4 +19,6 @@
   margin-bottom: -$margin / 1.5;
   width: 20%;
   max-width: 150px;
+  position: relative;
+  z-index: 1;
 }
